--- a/test.html
+++ b/test.html
@@ -3,20 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marketing Agency</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        .parent {
-            background-color: red;
-        }
-        .parent > div {
-            background-color: transparent;
-        }
+        body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    height: 100%;
+}
+
+.hero {
+    position: relative;
+    height: 100vh;
+    background: url('/public/') no-repeat center center/cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+nav .logo {
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.hero-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    z-index: 1;
+}
+
+.hero-content h1 {
+    font-size: 48px;
+    margin: 0;
+}
+
     </style>
 </head>
 <body>
-    <div class="parent">
-        Parent Div
-        <div>Child Div 1</div>
-        <div>Child Div 2</div>
-    </div>
+    <header class="hero">
+        <div class="overlay"></div>
+        <nav>
+            <div class="logo">Pulse</div>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Cases</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <div class="hero-content">
+            <h1>Marketing Agency</h1>
+        </div>
+    </header>
 </body>
 </html>
