--- a/test2.html
+++ b/test2.html
@@ -1,42 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blurred and Transparent Background</title>
-    <link rel="stylesheet" href="styles.css">
-    <style> body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
+    <title>AOS Example</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f4f4f4;
+        }
 
-.background {
-    background-image: url('/public/myPicForBg.jpeg'); /* Replace with your background image URL */
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-.content {
-    background-color: rgba(255, 255, 255,0.); /* White background with 60% opacity */
-    /* backdrop-filter: blur(10px);  */
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-}
-
-</style>
+        .section {
+            margin: 50px 0;
+            padding: 50px;
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
+
 <body>
-    <div class="background">
-        <div class="content">
-            <h1>Hello, World!</h1>
-            <p>This is a simple example of a blurred and transparent background.</p>
+
+    <div class="container">
+        <h1>AOS Example</h1>
+
+        <div class="section" data-aos="fade-up">
+            <h2>Fade Up Animation</h2>
+            <p>This section fades up when you scroll down to it.</p>
         </div>
+
+        <div class="section" data-aos="fade-right">
+            <h2>Fade Right Animation</h2>
+            <p>This section fades in from the right when you scroll down to it.</p>
+        </div>
+
+        <div class="section" data-aos="zoom-in">
+            <h2>Zoom In Animation</h2>
+            <p>This section zooms in when you scroll down to it.</p>
+        </div>
+
+        <div class="section" data-aos="slide-up">
+            <h2>Slide Up Animation</h2>
+            <p>This section slides up when you scroll down to it.</p>
+        </div>
+
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
+    <script>
+        // Initialize AOS
+        AOS.init({
+            duration: 800, // Animation duration in milliseconds
+        });
+    </script>
 </body>
+
 </html>
